<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_blue" >

    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginBottom="10dp"
    	android:gravity="center_vertical">
        
        <ImageView 
        	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:src="@drawable/bg1"/>
        
        <TextView 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="10dp"
    		android:textColor="#1C7EBD"
    		android:text="@string/text3"/>
        
    </LinearLayout>
    
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/text1"
    	android:layout_marginTop="10dp"
    	android:layout_marginBottom="10dp"
    	android:textColor="#000000"
    	android:textSize="20dp"/>
    
    <EditText 
        android:id="@+id/edit"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:hint="@string/text2"
    	android:textColorHint="#e3e3e3"
    	android:textSize="20dp"
    	android:inputType="number|textCapCharacters"
    	android:layout_marginTop="10dp"
    	android:layout_marginBottom="10dp"
    	android:layout_marginLeft="5dp"
    	android:layout_marginRight="5dp"/>
    
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:background="@drawable/selector4"
    	android:layout_marginTop="10dp">
        
    </LinearLayout>

</LinearLayout>
