<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_blue" >
    
    <LinearLayout
        android:id="@+id/load"    
        android:orientation="horizontal"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:gravity="center">
            
        <ProgressBar
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
                
        <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
       		android:text="@string/load"
       		android:textSize="20dp"
       		android:textColor="#000000"/>
            
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical"
    	android:visibility="gone">
        
        <LinearLayout 
            android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:orientation="horizontal"
    		android:layout_weight="1"
    		android:layout_marginTop="10dp"
    		android:layout_marginLeft="10dp"
    		android:layout_marginRight="10dp">
    		
            <LinearLayout 
           		android:layout_width="fill_parent"
    			android:layout_height="fill_parent"
    			android:layout_weight="1"
    			android:layout_marginRight="5dp"
    			android:gravity="center">
    			
                <ImageView 
                    android:id="@+id/img"
                    android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:src="@drawable/db"/>
                
        	</LinearLayout>
        	
            <LinearLayout 
            	android:layout_width="fill_parent"
    			android:layout_height="fill_parent"
    			android:orientation="vertical"
    			android:layout_weight="1"
    			android:layout_marginLeft="5dp"
    			android:gravity="center_vertical">
                
                <TextView 
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:textColor="#000000"
    				android:text="书名：满月之夜白鲸现"/>
                
                <TextView 
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:textColor="#000000"
    				android:text="作者：[日] 片山恭一"/>
                
                <TextView 
                    android:id="@+id/translator"
                    android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:textColor="#000000"
    				android:text="翻译：豫人"/>
                
                <TextView 
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:textColor="#000000"
    				android:text="售价：15.00元"/>
                
                <TextView 
                    android:id="@+id/publisher"
                    android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:textColor="#000000"
    				android:text="出版社：青岛出版社"/>
                
        	</LinearLayout>
            
        </LinearLayout>
        
        <ImageView 
        	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_gravity="center_horizontal"
    		android:src="@drawable/line"
    		android:layout_marginTop="10dp"
    		android:layout_marginBottom="10dp"/>
        
        <LinearLayout 
            android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:orientation="vertical"
    		android:layout_weight="1"
    		android:layout_marginLeft="10dp"
    		android:layout_marginRight="10dp">
            
            <TextView 
                android:id="@+id/id"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textColor="#000000"
    			android:text="ID:1220562"/>
            
            <TextView 
                android:id="@+id/pages"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textColor="#000000"
    			android:text="页数：180"/>
            
            <TextView 
                android:id="@+id/pubdate"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textColor="#000000"
    			android:text="出版日期：2005-1"/>
            
            <TextView 
                android:id="@+id/isbn10"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textColor="#000000"
    			android:text="isbn10:7543632608"/>
            
            <TextView 
                android:id="@+id/isbn13"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textColor="#000000"
    			android:text="isbn13:9787543632608"/>
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textColor="#000000"
    			android:text="@string/key"
    			android:layout_marginTop="10dp"/>
            
            <TextView 
                android:id="@+id/tags"
                android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:textColor="#000000"
    			android:text="片山恭一、日本、日本文学、满月之夜白鲸现、小说、爱情、纯爱、外国文学"/>
            
        </LinearLayout>
        
        <ImageView 
        	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_gravity="center_horizontal"
    		android:src="@drawable/line"
    		android:layout_marginTop="10dp"
    		android:layout_marginBottom="10dp"/>
        
        <LinearLayout 
            android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:orientation="vertical"
    		android:layout_weight="1"
    		android:layout_marginBottom="10dp"
    		android:layout_marginLeft="10dp"
    		android:layout_marginRight="10dp">
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textColor="#000000"
    			android:text="@string/zhaiyao"
    			android:layout_marginTop="10dp"
    			android:layout_marginBottom="10dp"/>
            
            <TextView 
                android:id="@+id/summary"
                android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:textColor="#000000"
    			android:text="那一年，是听莫扎特、钓鲈鱼和家庭破裂的一年。说到家庭破裂，母亲怪自己当初没有找到好男人，父亲则认为当时是被狐狸精迷住了眼，失常的是母亲，但出问题的是父亲……。"/>
            
        </LinearLayout>
        
    </LinearLayout>
    
</LinearLayout>